--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,105 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+header {
+  height: 100px;
+  display: flex;
+  align-items: center;
+  background: #6441a5;
+  background: -webkit-linear-gradient(to right, #2a0845, #6441a5);
+  background: linear-gradient(to right, #2a0845, #6441a5);
+}
+
+header > img {
+  height: 80%;
+  margin-left: 10%;
+}
+
+header > p {
+  font-family: VT323, monospace;
+  font-size: 50px;
+  color: whitesmoke;
+  margin-left: 60px;
+}
+
+.meme-form > button {
+  border: none;
+  font-family: VT323, monospace;
+  font-size: 25px;
+  letter-spacing: 1.5px;
+  color: white;
+  background: #6441a5;
+}
+
+.meme-form > input::-webkit-input-placeholder {
+  font-family: VT323, monospace;
+  font-size: 25px;
+  text-align: center;
+}
+.meme-form > input::-moz-placeholder {
+  font-family: VT323, monospace;
+  font-size: 25px;
+  text-align: center;
+}
+.meme-form > input:-ms-input-placeholder {
+  font-family: VT323, monospace;
+  font-size: 25px;
+  text-align: center;
+}
+.meme-form > input:-webkit-input-placeholder {
+  font-family: VT323, monospace;
+  font-size: 25px;
+  text-align: center;
+}
+
+.meme {
+  position: relative;
+  width: 90%;
+  margin: auto;
+}
+
+.meme > img {
+  width: 70%;
+  height: 70%;
+}
+
+.meme > h2 {
+  position: absolute;
+}
+
+.meme > .bottom {
+  bottom: 0;
+}
+
+.meme > .top {
+  top: 0;
+}
+
+.meme > h2 {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000 -2px -2px 0 #000 2px -2px 0 #000 -2px 2px 0 #000 0
+    2px 0 #000 2px 0 0 #000 0 -2px 0 #000 -2px 0 0 #000 2px 2px 5px #000;
 }
